<resources>
    <string name="app_name">Final Scanner App</string>
    <string name="footer_activity_main">Alex Fotoniu © 2021</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="forgot_pass_button">Forgot your password?</string>
    <string name="logout_button">Logout</string>
    <string name="reset_password_button">Reset Password</string>
    <string name="home_menu_button">Home</string>
    <string name="camera_menu_button">Camera</string>
    <string name="profile_menu_button">Profile</string>
    <string name="email_adress_title">EMAIL:</string>
    <string name="full_name_title">FULL NAME:</string>
    <string name="age_title">AGE:</string>
</resources>